--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview --host 0.0.0.0 --port $PORT",
-    "start": "vite preview --host 0.0.0.0 --port $PORT",
+    "preview": "vite preview",
+    "start": "vite preview --host 0.0.0.0 --port ${PORT:-8080}",
     "prepare": "husky",
     "commit": "git-cz"
+  },
+  "engines": {
+    "node": ">=20.19.0"
   },
   "config": {
     "commitizen": {
@@ -26,6 +29,7 @@
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.3",
+    "serve": "^14.2.5",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.13"
   },
