--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "serve -s dist -l ${PORT:-8080}",
+    "start": "serve -s dist -l $PORT",
     "prepare": "husky",
     "commit": "git-cz"
   },
