--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "serve -s dist -l $PORT",
+    "start": "serve -s dist --listen tcp://0.0.0.0:$PORT",
     "prepare": "husky",
     "commit": "git-cz"
   },
